.sourceManifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: resume-service
spec:
  selector:
    resume.jefedavis.go/candidate: jeffdavis
  ports:
  - port: 8080
    targetPort: 1313
